force-app/main/default/objects/Receipt__c/fields/Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_Text__c</fullName>
    <formula>text(day( Receipt_Date__c ))+&apos;/&apos;+text(month(Receipt_Date__c))+&apos;/&apos;+text(year(Receipt_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_Text</label>
    <type>Text</type>
</CustomField>