force-app/main/default/objects/Receipt__c/fields/Doc_Type_Heb__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type_Heb__c</fullName>
    <formula>case(text( Document_type__c ),
&apos;Invoice_Receipt&apos;,&apos;קבלה&apos;,
&apos;Price Quotation&apos;,&apos;הצעת מחיר&apos;,
&apos;I dont have a document&apos;,&apos;ללא מסמך&apos;,
&apos;Statement&apos;,&apos;הצהרה&apos;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc_Type_Heb</label>
    <type>Text</type>
</CustomField>