force-app/main/default/objects/Receipt__c/fields/Doc_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type_Value__c</fullName>
    <formula>text( Document_type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc_Type_Value</label>
    <type>Text</type>
</CustomField>