force-app/main/default/objects/Receipt__c/fields/Document_type__c.field-meta.xml
<CustomField>
    <fullName>Document_type__c</fullName>
    <label>Document type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice_Receipt</fullName>
                <label>Invoice/Receipt</label>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
            <value>
                <fullName>I dont have a document</fullName>
                <label>I don&apos;t have a document</label>
            </value>
            <value>
                <fullName>Price Quotation</fullName>
                <isActive>false</isActive>
                <label>Price Quotation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>