force-app/main/default/objects/Receipt__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <referenceTo>Request_Item__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Item_Receipts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>