force-app/main/default/objects/Receipt__c/fields/Open_File__c.field-meta.xml
<CustomField>
    <fullName>Open_File__c</fullName>
    <formula>if(isblank( File_ID__c ),null,
hyperlink(&quot;/lightning/r/ContentDocument/&quot;+ File_ID__c+&quot;/view&quot;,&quot;Open Doc&quot;,&quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>