force-app/main/default/objects/Receipt__c/fields/Process_New_File__c.field-meta.xml
<CustomField>
    <fullName>Process_New_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process New File</label>
    <type>Checkbox</type>
</CustomField>