force-app/main/default/objects/Receipt__c/fields/Show_Delete_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Delete_Button__c</fullName>
    <formula>if(text( Status__c )=&apos;Uploaded unchecked yet&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Delete Button</label>
    <type>Checkbox</type>
</CustomField>