force-app/main/default/objects/Receipt__c/fields/Show_Note__c.field-meta.xml
<CustomField>
    <fullName>Show_Note__c</fullName>
    <formula>if(text( Status__c )=&apos;Invalid&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Note</label>
    <type>Checkbox</type>
</CustomField>