force-app/main/default/objects/Receipt__c/fields/Show_Replace_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Replace_Button__c</fullName>
    <formula>if(text( Status__c )=&apos;Valid&apos;,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Replace Button</label>
    <type>Checkbox</type>
</CustomField>