force-app/main/default/objects/Receipt__c/fields/Show_RN__c.field-meta.xml
<CustomField>
    <fullName>Show_RN__c</fullName>
    <formula>if(text( Document_type__c )=&apos;Invoice_Receipt&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show RN</label>
    <type>Checkbox</type>
</CustomField>