force-app/main/default/objects/Receipt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded unchecked yet</fullName>
                <default>true</default>
                <label>Uploaded unchecked yet</label>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Replaced Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>