force-app/main/default/objects/Receipt__c/fields/Status_Heb__c.field-meta.xml
<CustomField>
    <fullName>Status_Heb__c</fullName>
    <formula>case(text( Status__c ),
&apos;Uploaded unchecked yet&apos;,&apos;טרם נבדק&apos;,
&apos;Valid&apos;,&apos;תקין&apos;,
&apos;Invalid&apos;,&apos;לא תקין&apos;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status_Heb</label>
    <type>Text</type>
</CustomField>