force-app/main/default/objects/Receipt__c/fields/Update_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Update_Opportunity__c</fullName>
    <formula>Item__r.Opportunity__r.Id &lt;&gt; Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Opportunity</label>
    <type>Checkbox</type>
</CustomField>