force-app/main/default/objects/Receipt__c/fields/Why_do_not_have_document__c.field-meta.xml
<CustomField>
    <fullName>Why_do_not_have_document__c</fullName>
    <label>Why do not have document</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>